# interpreter

./: .clang-tidy  .gitignore  CMakeLists.txt  design.txt  temp.py
src/: builtin_conversions.hpp  callable.hpp  custom_callable.hpp  evaluable.hpp  evaluate.hpp  executable.hpp  interpreter.hpp  object.cpp  object.hpp  ops_imple.cpp  ops_imple.hpp  tokenize.hpp  type.cpp  type.hpp  types.hpp
src/builtin_types/: bool.cpp  bool.hpp  float.hpp  int.hpp  none.cpp  none.hpp  str.cpp  str.hpp
standalone/: main.cpp
test/: test.cpp
